--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ license = "Apache-2.0"
 edition = "2018"
 
 [dependencies]
-tower-web = "0.3.7"
 hex = "0.3.2"
 web3 = "0.8.0"
 log = "0.4.6"
@@ -19,8 +18,8 @@ interledger-settlement = { git = "https://github.com/interledger-rs/interledger-
 interledger-service-util = "^0.2.2-alpha.1"
 interledger-ildcp = "^0.2.2-alpha.1"
 ethabi = "8.0.1"
-serde = "1.0.99"
-serde_json = "1.0.40"
+serde = { version = "1.0.101", default-features = false }
+serde_json = { version = "1.0.41", default-features = false }
 json = "0.11.14"
 bytes = "0.4.12"
 ring = "0.14.6"
@@ -47,6 +46,7 @@ tiny-keccak= {version = "1.4.2", optional = true }
 secp256k1 = { version = "0.15.5", optional = true }
 rlp = { version = "0.4.2", optional = true }
 ethereum-types = { version = "0.6.0", optional = true }
+warp = "0.1.20"
 
 
 [dev-dependencies]
