--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ log = "0.4.6"
 tokio = "0.1.21"
 hyper = "0.12.31"
 futures = "0.1.25"
-interledger-service = "^0.2.2-alpha.1"
+interledger-service = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
 interledger-settlement = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
-interledger-service-util = "^0.2.2-alpha.1"
-interledger-ildcp = "^0.2.2-alpha.1"
+interledger-service-util = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
+interledger-ildcp = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
 ethabi = "8.0.1"
 serde = "1.0.99"
 serde_json = "1.0.40"
@@ -56,8 +56,9 @@ parking_lot = "0.9.0"
 net2 = "0.2.33"
 os_type = "2.2.0"
 rand = "0.7.0"
-interledger = "^0.4.1-alpha.1"
-ilp-node = "^0.4.1-alpha.1"
+interledger = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
+ilp-node = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
+
 
 [features]
 ethereum = ["tiny-keccak", "secp256k1", "rlp", "ethereum-types"]
