--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,49 +7,50 @@ license = "Apache-2.0"
 edition = "2018"
 
 [dependencies]
-hex = "0.3.2"
-web3 = "0.8.0"
-log = "0.4.6"
-tokio = "0.1.21"
-hyper = "0.12.31"
-futures = "0.1.25"
-interledger-settlement = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
+warp = { version = "0.1.20", default-features = false }
+tower-web = { version = "0.3.7", default-features = false }
+hex = { version = "0.3.2", default-features = false }
+web3 = { version = "0.8.0", default-features = false }
+log = { version = "0.4.6", default-features = false }
+tokio = { version = "0.1.21", default-features = false }
+hyper = { version = "0.12.31", default-features = false }
+futures = { version = "0.1.25", default-features = false }
+interledger-settlement = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master", default-features = false }
 interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
-ethabi = "8.0.1"
-serde = { version = "1.0.101", default-features = false }
-serde_json = { version = "1.0.41", default-features = false }
-bytes = "0.4.12"
-ring = "0.14.6"
-url = "2.1.0"
-reqwest = "0.9.20"
-env_logger = "0.6.2"
-uuid = { version = "0.7.4", features = ["serde", "v4"]  }
-tokio-retry = "0.2.0"
-redis = "0.12.0"
-http = "0.1.17"
-clap = "2.32.0"
-clarity = "0.1.22"
-sha3 = "0.8.2"
-num-bigint = "0.2.2"
-lazy_static = "1.4.0"
-secrecy = { version = "0.5.0", features = ["serde", "bytes"] }
-parking_lot = "0.9.0"
-config = { version = "0.9.3", features = [ "json", "yaml" ] }
-libc = "0.2.62"
-tiny-keccak= {version = "1.4.2", optional = true }
-secp256k1 = { version = "0.15.5", optional = true }
-rlp = { version = "0.4.2", optional = true }
-ethereum-types = { version = "0.6.0", optional = true }
-warp = "0.1.20"
+ethabi = { version = "8.0.1", default-features = false }
+serde = { version = "1.0.99", default-features = false }
+serde_json = { version = "1.0.40", default-features = false }
+bytes = { version = "0.4.12", default-features = false }
+ring = { version = "0.14.6", default-features = false }
+url = { version = "2.1.0", default-features = false }
+reqwest = { version = "0.9.20", default-features = false }
+env_logger = { version = "0.6.2", default-features = false }
+uuid = { version = "0.7.4", default-features = false, features = ["serde", "v4"]  }
+tokio-retry = { version = "0.2.0", default-features = false }
+redis = { version = "0.12.0", default-features = false }
+http = { version = "0.1.17", default-features = false }
+clap = { version = "2.32.0", default-features = false }
+clarity = { version = "0.1.22", default-features = false }
+sha3 = { version = "0.8.2", default-features = false }
+num-bigint = { version = "0.2.2", default-features = false }
+lazy_static = { version = "1.4.0", default-features = false }
+secrecy = { version = "0.5.0", default-features = false, features = ["serde", "bytes"] }
+parking_lot = { version = "0.9.0", default-features = false }
+config = { version = "0.9.3", default-features = false, features = [ "json", "yaml" ] }
+libc = { version = "0.2.62", default-features = false }
+tiny-keccak= { version = "1.4.2", default-features = false, optional = true }
+secp256k1 = { version = "0.15.5", default-features = false, optional = true }
+rlp = { version = "0.4.2", default-features = false, optional = true }
+ethereum-types = { version = "0.6.0", default-features = false, optional = true }
 
 
 [dev-dependencies]
-mockito = "0.20.0"
-net2 = "0.2.33"
-os_type = "2.2.0"
-rand = "0.7.0"
-interledger = "0.4.1-alpha.1"
-ilp-node = "0.4.1-beta.3"
+mockito = { version = "0.20.0", default-features = false }
+net2 = { version = "0.2.33", default-features = false }
+os_type = { version = "2.2.0", default-features = false }
+rand = { version = "0.7.0", default-features = false }
+interledger = { version = "0.4.1-alpha.1", default-features = false }
+ilp-node = { version = "0.4.1-beta.3", default-features = false }
 
 [features]
 ethereum = ["tiny-keccak", "secp256k1", "rlp", "ethereum-types"]
