--- a/crates/ethereum-engine/Cargo.toml
+++ b/crates/ethereum-engine/Cargo.toml
@@ -13,9 +13,9 @@ log = "0.4.6"
 tokio = "0.1.21"
 hyper = "0.12.31"
 futures = "0.1.25"
-interledger-service = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
+interledger-service = { git = "https://github.com/interledger-rs/interledger-rs", rev = "e8662ac345c2f7ae4147af928f0b2d4aee5265e4" }
 settlement-core = { path = "../settlement-core" }
-interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
+interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", rev = "e8662ac345c2f7ae4147af928f0b2d4aee5265e4" }
 ethabi = "8.0.1"
 serde = { version = "1.0.101", default-features = false }
 serde_json = { version = "1.0.41", default-features = false }
