chore: make redis backend the default one and update the readme

--- a/crates/ethereum-engine/Cargo.toml
+++ b/crates/ethereum-engine/Cargo.toml
@@ -62,4 +62,5 @@ interledger = { git = "https://github.com/interledger-rs/interledger-rs", branch
 ilp-node = { git = "https://github.com/interledger-rs/interledger-rs", branch = "rfc-update" }
 
 [features]
+default = ["redis"]
 redis = ["redis_crate", "interledger-settlement/redis", "interledger-settlement/backends_common"]
