--- a/crates/ethereum-engine/Cargo.toml
+++ b/crates/ethereum-engine/Cargo.toml
@@ -10,34 +10,34 @@ edition = "2018"
 hex = "0.3.2"
 web3 = "0.8.0"
 log = "0.4.6"
-tokio = "0.1.21"
-hyper = "0.12.31"
-futures = "0.1.25"
-interledger-service = "0.3.0"
-interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
-interledger-settlement = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master", default-features = false  }
+tokio = { version = "0.2.8", features = ["macros", "rt-core", "time"] }
+hyper = "0.13"
+futures = { version = "0.3", features = ["compat"] }
+interledger-service = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/futures03" }
+interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/futures03" }
+interledger-settlement = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/futures03", default-features = false  }
 ethabi = "8.0.1"
 serde = { version = "1.0.101", default-features = false }
 serde_json = { version = "1.0.41", default-features = false }
 json = "0.11.14"
-bytes = "0.4.12"
+bytes = "0.5"
 ring = "0.16.9"
-tokio-executor = "0.1.8"
 url = "2.1.0"
-reqwest = "0.9.20"
+reqwest = "0.10"
 env_logger = "0.6.2"
 uuid = { version = "0.8.1", features = ["serde", "v4"]  }
 tokio-retry = "0.2.0"
-redis_crate = { package = "redis", version = "0.13.0", optional = true }
-http = "0.1.17"
+# redis_crate = { package = "redis", version = "0.13.0", optional = true }
+redis_crate = { package = "redis", git = "https://github.com/mitsuhiko/redis-rs", features = ["tokio-rt-core"], optional = true }
+http = "0.2"
 clap = "2.32.0"
 clarity = "0.1.22"
 sha3 = "0.8.2"
 num-bigint = "0.2.2"
 num-traits = "0.2.8"
 lazy_static = "1.4.0"
-secrecy = { version = "0.5.1", features = ["serde", "bytes"] }
-zeroize = { version = "1.0.0", features = ["bytes"] }
+secrecy = { version = "0.6", features = ["serde", "bytes"] }
+zeroize = { version = "1.0.0" }
 parking_lot = "0.9.0"
 config = { version = "0.9.3", features = [ "json", "yaml" ] }
 libc = "0.2.62"
@@ -45,7 +45,8 @@ tiny-keccak="1.4.2"
 secp256k1 ="0.15.5"
 rlp ="0.4.2"
 ethereum-types ="0.6.0"
-warp = "0.1.20"
+warp = { git = "https://github.com/seanmonstar/warp" }
+async-trait = "0.1.22"
 
 
 [dev-dependencies]
@@ -55,8 +56,8 @@ parking_lot = "0.9.0"
 net2 = "0.2.33"
 os_type = "2.2.0"
 rand = "0.7.0"
-interledger = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
-ilp-node = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
+interledger = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/futures03" }
+ilp-node = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/futures03" }
 
 [features]
 default = ["redis"]
