--- a/crates/ethereum-engine/Cargo.toml
+++ b/crates/ethereum-engine/Cargo.toml
@@ -27,8 +27,7 @@ reqwest = "0.10"
 env_logger = "0.6.2"
 uuid = { version = "0.8.1", features = ["serde", "v4"]  }
 tokio-retry = "0.2.0"
-# redis_crate = { package = "redis", version = "0.13.0", optional = true }
-redis_crate = { package = "redis", git = "https://github.com/mitsuhiko/redis-rs", features = ["tokio-rt-core"], optional = true }
+redis_crate = { package = "redis", version = "0.15.1", features = ["tokio-rt-core"], optional = true }
 http = "0.2"
 clap = "2.32.0"
 clarity = "0.1.22"
@@ -45,7 +44,7 @@ tiny-keccak="1.4.2"
 secp256k1 ="0.15.5"
 rlp ="0.4.2"
 ethereum-types ="0.6.0"
-warp = { git = "https://github.com/seanmonstar/warp" }
+warp = "0.2"
 async-trait = "0.1.22"
 
 
