--- a/crates/ethereum-engine/Cargo.toml
+++ b/crates/ethereum-engine/Cargo.toml
@@ -46,6 +46,7 @@ secrecy = { version = "0.6", features = ["serde", "bytes"], optional = true }
 bytes = { version = "0.5", optional = true }
 anyhow = "1.0.31"
 once_cell = "1.4.0"
+rustc-hex = "2.1.0"
 
 
 #kjson = "0.11.14"
