--- a/crates/ethereum-engine/Cargo.toml
+++ b/crates/ethereum-engine/Cargo.toml
@@ -8,13 +8,13 @@ edition = "2018"
 
 [dependencies]
 # ilp deps
-interledger-service = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/remove-statics" }
-interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/remove-statics" }
-interledger-settlement = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/remove-statics", default-features = false  }
-interledger-errors = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/remove-statics", default-features = false  }
+interledger-service = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
+interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
+interledger-settlement = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master", default-features = false  }
+interledger-errors = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master", default-features = false  }
 
 # eth deps
-ethers = { path = "../../../ethers/ethers" }
+ethers = { git = "https://github.com/gakonst/ethers-rs" }
 
 # misc
 parking_lot = "0.9.0"
@@ -24,7 +24,7 @@ tokio = { version = "0.2.21", features = ["macros", "rt-core", "time"] }
 thiserror = "1.0.19"
 
 # API related
-futures = { version = "0.3", features = ["compat"] }
+futures = { version = "0.3.5" }
 tokio-retry = "0.2.0"
 http = "0.2.1"
 
@@ -60,8 +60,8 @@ mockito = "0.25.2"
 net2 = "0.2.33"
 rand = "0.7.0"
 hex = "0.4.2"
-interledger = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/remove-statics" }
-ilp-node = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/remove-statics" }
+interledger = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
+ilp-node = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
 
 [features]
 default = ["redis"]
